Fixed overflowing text

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,9 +19,7 @@
   font-size: 1.05em;
 }
 
-.exp-header{
-  word-wrap: break-word;
-}
+ 
 
 
 .hero-title{
